tests/kubeless-test-client/route.yaml
#Example RouteRule configuring HTTP Rewrite from path /sample/v1 to  /
apiVersion: config.istio.io/v1alpha2
kind: RouteRule
metadata:
  labels:
    example: hello
  name: sample-rule
spec:
  destination:
    name: hello
    namespace: kubeless-test
  match:
    request:
      headers:
        uri:
          prefix: /hello
  rewrite:
    uri: /
  route:
  - labels:
      version: v1
